Fix CAPTCHA validation logic in CustomerLogin form

--- a/repo_git/onlinebookstore/WebContent/CustomerLogin.html
+++ b/repo_git/onlinebookstore/WebContent/CustomerLogin.html
@@ -158,7 +158,7 @@ input {
 				why += "- Please Enter CAPTCHA Code.\n";
 			}
 			if (theform.CaptchaInput.value != "") {
-				if (ValidCaptcha(theform.CaptchaInput.value) == false) {
+				if (!ValidCaptcha(theform.CaptchaInput.value)) {
 					why += "- The CAPTCHA Code Does Not Match.\n";
 				}
 			}
