--- a/repo_git/onlinebookstore/WebContent/CustomerLogin.html
+++ b/repo_git/onlinebookstore/WebContent/CustomerLogin.html
@@ -184,11 +184,7 @@ input {
 		function ValidCaptcha() {
 			var str1 = removeSpaces(document.getElementById('txtCaptcha').value);
 			var str2 = removeSpaces(document.getElementById('CaptchaInput').value);
-			if (str1 == str2) {
-				return true;
-			} else {
-				return false;
-			}
+			return str1 === str2;
 		}
 
 		// Remove the spaces from the entered and generated code
