Enhance CustomerLogin.html table structure with semantic elements for better accessibility

--- a/repo_git/onlinebookstore/WebContent/CustomerLogin.html
+++ b/repo_git/onlinebookstore/WebContent/CustomerLogin.html
@@ -102,9 +102,12 @@ input {
 	<form action="userlog" method="post" onsubmit="checkform()"
 		id="theform">
 		<table class="tab" style="width: 40%">
-			<tr style="color: brown; padding-left: 35%">
-				<td>Customer LOGIN</td>
-			</tr>
+			<thead>
+				<tr>
+				<th colspan="2" style="color: brown; text-align: center;">Customer LOGIN</th>
+				</tr>
+			</thead>
+			<tbody>
 			<tr>
 				<td><a href="SellerLogin.html"
 					style="color: blue; font-size: medium;">Are you Seller?, Click
