Fix CAPTCHA validation logic in CustomerLogin.html to use the correct function call

--- a/repo_git/onlinebookstore/WebContent/CustomerLogin.html
+++ b/repo_git/onlinebookstore/WebContent/CustomerLogin.html
@@ -162,7 +162,7 @@ input {
 				why += "- Please Enter CAPTCHA Code.\n";
 			}
 			if (theform.CaptchaInput.value != "") {
-				if (!ValidCaptcha(theform.CaptchaInput.value)) {
+				if (!ValidCaptcha()) {
 					why += "- The CAPTCHA Code Does Not Match.\n";
 				}
 			}
