--- a/repo_git/onlinebookstore/WebContent/CustomerRegister.html
+++ b/repo_git/onlinebookstore/WebContent/CustomerRegister.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" xml:lang="en">
+
 <head>
 <meta charset="ISO-8859-1">
 <title>Book Store</title>
@@ -21,83 +23,74 @@ input {
 
 </style>
 </head>
+
 <body onload="funload()">
-	<header>
-		<nav class="navbar navbar-expand-sm bg-dark">
-				<a class="navbar-brand">
-					<!-- The below line can be an image or a h1, either will work -->
-					<img src="logo.png" alt="Google logo" width="60" height="30px">
-				</a>
-				
-				<button style="background-color:white;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				    <span class="navbar-toggler-icon"></span>
-				 </button>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-dark">
+            <a class="navbar-brand">
+                <img src="logo.png" alt="Google logo" width="60" height="30px">
+            </a>
+            <button style="background-color:white;" class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><span><a class="nav-link" href="index.html">Home</a></span></li>
+                    <li class="nav-item"><span><a class="nav-link" href="login.html">Login</a></span></li>
+                    <li class="nav-item"><span><a class="nav-link active" href="CustomerRegister.html">Register</a></span></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-                <div class="collapse navbar-collapse" id="navbarNav">                
-				<ul class="navbar-nav" >
-					<li class="nav-item"><span><a class="nav-link" href="index.html">Home</a></span></li>
-					<li class="nav-item "><span><a class="nav-link" href="login.html">Login</a></span></li>
-					<li class="nav-item "><span><a class="nav-link active" href="CustomerRegister.html">Register</a></span></li>
-				</ul>
-				</div>
-			</nav>
-	</header>
-	<br/>
-	
-	<form action="userreg" method="post">
-		<table class="tab" style="width:40%">
+    <br />
 
-			<tr style="background-color: white; color: green; border-radius: 25%">
-				<td>Enter the Registration Details</td>
-			</tr>
-			<tr>
-				<td>
-				<!-- <label for="username">Username : </label> 
-				<input
-					type="text" name="username" id="userName"
-					placeholder="Enter your Username" required>
-				<br/> -->
-				<label for="Email" style="margin-right: 5%"> Email Id : </label> 
-					<input type="text" name="mailid" id="Email"
-					placeholder="Enter your Email">
-				<br>
-				<label for="passWord">Password :&nbsp; </label> 
-				<input
-					type="password" name="password" id="passWord"
-					placeholder="Enter Password" required>
-				<br>
-				<label for="firstName">First Name : </label> 
-				<input
-					type="text" name="firstname" id="firstName"
-					placeholder="Enter your First Name" required>
-				<br>
-				<label for="lastName">Last Name : </label> 
-				<input
-					type="text" name="lastname" id="lastName"
-					placeholder="Enter your Last Name" required>
-				<br>
-				<label for="address">Address: </label>
-				<textarea name="address" id="address"
-						placeholder="Enter your Address" required> </textarea>
-				<br>
-				<label for="phno">Mobile No : </label> 
-				<input type="text"
-					name="phone" id="phno" placeholder="Enter your Phone Number"
-					required>
-				<br>
-				<input type="checkbox"
-					name="acceptance" /> 
-				<label
-					for="checkbox" for="acceptance"
-					style="font-size: small; color: blue">I
-						ACCEPT ALL TERMS &amp; CONDITIONS</label>
-				<br>
-				<input style="text-align:center;" class="btn btn-success" type="submit" value="REGISTER ME ">
-				</td>
-			</tr>
-	
-		</table>
-	</form>
+    <form action="userreg" method="post">
+        <table class="tab" style="width:40%">
+            <thead>
+                <tr style="background-color: white; color: green;">
+                    <th>Enter the Registration Details</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <label for="Email" style="margin-right: 5%">Email Id:</label>
+                        <input type="text" name="mailid" id="Email" placeholder="Enter your Email">
+                        <br>
+
+                        <label for="passWord">Password:</label>
+                        <input type="password" name="password" id="passWord" placeholder="Enter Password" required>
+                        <br>
+
+                        <label for="firstName">First Name:</label>
+                        <input type="text" name="firstname" id="firstName" placeholder="Enter your First Name" required>
+                        <br>
+
+                        <label for="lastName">Last Name:</label>
+                        <input type="text" name="lastname" id="lastName" placeholder="Enter your Last Name" required>
+                        <br>
+
+                        <label for="address">Address:</label>
+                        <textarea name="address" id="address" placeholder="Enter your Address" required></textarea>
+                        <br>
+
+                        <label for="phno">Mobile No:</label>
+                        <input type="text" name="phone" id="phno" placeholder="Enter your Phone Number" required>
+                        <br>
+
+                        <input type="checkbox" name="acceptance" id="acceptance" />
+                        <label for="acceptance" style="font-size: small; color: blue">I ACCEPT ALL TERMS &amp; CONDITIONS</label>
+                        <br>
+
+                        <input style="text-align:center;" class="btn btn-success" type="submit" value="REGISTER ME">
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </form>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" ></script>
