Add DOCTYPE declaration and restructure table in login.html for improved HTML semantics

--- a/repo_git/onlinebookstore/WebContent/login.html
+++ b/repo_git/onlinebookstore/WebContent/login.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" xml:lang="en">
+
 <head>
 <meta charset="ISO-8859-1">
 <title>Book Store</title>
@@ -37,9 +39,12 @@
 	<div id="topmid"><h1>Welcome to Online Book Store</h1></div>
 	<br>
 	<table class="tab">
-		<tr style="background-color: white; color: green; border-radius: 25%">
-			<td>Login or SignUp Below</td>
-		</tr>
+		<thead>
+			<tr style="background-color: white; color: green;">
+				<th>Login or SignUp Below</th>
+			</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td><a href="SellerLogin.html">Login As Admin</a></td>
 		</tr>
@@ -50,6 +55,7 @@
 		<tr>
 			<td><a href="CustomerRegister.html">New user ! Register Here</a></td>
 		</tr>
+		</tbody>
 	</table>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" ></script>
