--- a/repo_git/onlinebookstore/WebContent/CustomerLogin.html
+++ b/repo_git/onlinebookstore/WebContent/CustomerLogin.html
@@ -191,8 +191,18 @@
     </form>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+      integrity="sha384-DNSp+dBpjr1ImOjAjdxogDRI6x9EtWtc3O7xxNOI3kGG0MI68m6tuMnBl4cb1I1f"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-8B3DoV6Dckc8mrXoOuyY+IjEwTT+z52p1eH0zV+nKDaCLiIXduI5YdN07y7yubRE"
+      crossorigin="anonymous"
+    ></script>
+
     <script type="text/javascript">
       // Captcha Script
 
