--- a/repo_git/onlinebookstore/WebContent/CustomerHome.html
+++ b/repo_git/onlinebookstore/WebContent/CustomerHome.html
@@ -1,75 +1,130 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
-<head>
-<meta charset="ISO-8859-1">
-<title>Book Store</title>
-<link rel="apple-touch-icon" sizes="180x180"
-	href="./favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32"
-	href="./favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16"
-	href="./favicons/favicon-16x16.png">
-<link rel="manifest" href="./favicons/site.webmanifest">
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="styles.css">
-<!-- JavaScript Bundle with Popper -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-	
-</script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js">
-	
-</script>
-<script>
-	var activeTab = 'home';
-</script>
-</head>
-<body>
-	<header>
-		<nav class="navbar navbar-expand-sm bg-dark"
-			style="margin-bottom: 0px">
-			<a class="navbar-brand"> <!-- The below line can be an image or a h1, either will work -->
-				<img src="logo.png" alt="Google logo" width="60" height="30px">
-			</a>
+  <head>
+    <meta charset="ISO-8859-1" />
+    <title>Book Store</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicons/site.webmanifest" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <!-- JavaScript Bundle with Popper -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+    />
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha384-ZvpUoO/+Pw5y+Bbi7tj1HjN1QSp8RbC5CW0jCqVJG59A8msZfTnGqZjJ3F3DjcNo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"
+      integrity="sha384-oS3vJWv+0UjzBf0e6dGk9I+W7zF8n8ej1X2G4W9zO+Sovc27lqk6t5QzFp2f8b6T"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      var activeTab = "home";
+    </script>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-sm bg-dark" style="margin-bottom: 0px">
+        <a class="navbar-brand">
+          <!-- The below line can be an image or a h1, either will work -->
+          <img src="logo.png" alt="Google logo" width="60" height="30px" />
+        </a>
 
-			<button style="background-color: white;" class="navbar-toggler"
-				type="button" data-toggle="collapse" data-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"
-					style="color: #fff; font-size: 28px;"></span>
-			</button>
+        <button
+          style="background-color: white"
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span
+            class="navbar-toggler-icon"
+            style="color: #fff; font-size: 28px"
+          ></span>
+        </button>
 
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item"><span><a
-							class="nav-link" href="viewbook" id="home">Home</a></span></li>
-					<li class="nav-item "><span><a class="nav-link"
-							href="viewbook" id="books">Available
-								Books</a></span></li>
-					<li class="nav-item "><span><a
-							class="nav-link glyphicon  glyphicon-shopping-cart " href="cart"
-							id="cart"> Cart</a></span></li>
-					<li class="nav-item "><span><a class="nav-link"
-							href="about" id="about">About Us</a></span></li>
-					<li class="nav-item "><span><a class="nav-link"
-							href="logout" id="logout">Logout</a></span></li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-
-</body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script
-	src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"></script>
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"></script>
-<script>
-	document.getElementById(activeTab).classList.add("active");
-</script>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <span
+                ><a class="nav-link" href="viewbook" id="home">Home</a></span
+              >
+            </li>
+            <li class="nav-item">
+              <span
+                ><a class="nav-link" href="viewbook" id="books"
+                  >Available Books</a
+                ></span
+              >
+            </li>
+            <li class="nav-item">
+              <span
+                ><a
+                  class="nav-link glyphicon glyphicon-shopping-cart"
+                  href="cart"
+                  id="cart"
+                >
+                  Cart</a
+                ></span
+              >
+            </li>
+            <li class="nav-item">
+              <span
+                ><a class="nav-link" href="about" id="about">About Us</a></span
+              >
+            </li>
+            <li class="nav-item">
+              <span
+                ><a class="nav-link" href="logout" id="logout">Logout</a></span
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"
+  ></script>
+  <script>
+    document.getElementById(activeTab).classList.add("active");
+  </script>
 </html>
