--- a/repo_git/onlinebookstore/WebContent/SellerLogin.html
+++ b/repo_git/onlinebookstore/WebContent/SellerLogin.html
@@ -151,15 +151,14 @@
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
-      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-      crossorigin="anonymous"
-    ></script>
+    <div id="external-scripts"></div>
+    <script>
+      fetch("external-scripts.html")
+        .then((res) => res.text())
+        .then((data) => {
+          document.getElementById("external-scripts").innerHTML = data;
+          document.getElementById(activeTab).classList.add("active");
+        });
+    </script>
   </body>
 </html>
