--- a/repo_git/onlinebookstore/WebContent/index.html
+++ b/repo_git/onlinebookstore/WebContent/index.html
@@ -28,47 +28,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body onload="funload()">
-    <header>
-      <nav class="navbar navbar-expand-sm bg-dark">
-        <a class="navbar-brand">
-          <!-- The below line can be an image or a h1, either will work -->
-          <img src="logo.png" alt="Google logo" width="60" height="30px" />
-        </a>
-
-        <button
-          style="background-color: white"
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <span><a class="nav-link active" href="index.html">Home</a></span>
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="CustomerLogin.html">Login</a></span
-              >
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="CustomerRegister.html"
-                  >Register</a
-                ></span
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <div id="navbar-placeholder"></div>
     <br />
     <div id="topmid">
       <h1>Welcome to Online <br />Book Store</h1>
@@ -104,6 +64,16 @@
         .then((data) => {
           document.getElementById("external-scripts").innerHTML = data;
         });
+    </script>
+    <script>
+      fetch("navbar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("navbar-placeholder").innerHTML = data;
+        })
+        .catch((error) =>
+          console.error("Errore nel caricamento della navbar:", error)
+        );
     </script>
   </body>
 </html>
