--- a/repo_git/onlinebookstore/WebContent/SellerHome.html
+++ b/repo_git/onlinebookstore/WebContent/SellerHome.html
@@ -25,8 +25,6 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
-    <!-- JavaScript Bundle with Popper -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
@@ -40,82 +38,14 @@
       var activeTab = "home";
     </script>
   </head>
+
   <body>
-    <header>
-      <nav class="navbar navbar-expand-sm bg-dark" style="margin-bottom: 0px">
-        <a class="navbar-brand">
-          <!-- The below line can be an image or a h1, either will work -->
-          <img src="logo.png" alt="Google logo" width="60" height="30px" />
-        </a>
-
-        <button
-          style="background-color: white"
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span
-            class="navbar-toggler-icon"
-            style="color: #fff; font-size: 28px"
-          ></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="storebooks" id="home">Home</a></span
-              >
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="storebooks" id="storebooks"
-                  >Store Books</a
-                ></span
-              >
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="addbook" id="addbook"
-                  >Add Books</a
-                ></span
-              >
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="removebook" id="removebook"
-                  >Remove Books</a
-                ></span
-              >
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="about" id="about">About Us</a></span
-              >
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="logout" id="logout">Logout</a></span
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <div id="navbar-placeholder"></div>
     <div id="external-scripts"></div>
+    <script src="scripts/common.js"></script>
     <script>
-      fetch("external-scripts.html")
-        .then((res) => res.text())
-        .then((data) => {
-          document.getElementById("external-scripts").innerHTML = data;
-        });
+      const active = document.getElementById(activeTab);
+      if (active) active.classList.add("active");
     </script>
   </body>
-  <script>
-    document.getElementById(activeTab).classList.add("active");
-  </script>
 </html>
