--- a/repo_git/onlinebookstore/WebContent/SellerLogin.html
+++ b/repo_git/onlinebookstore/WebContent/SellerLogin.html
@@ -41,60 +41,16 @@
       }
 
       .AdminLogin:hover {
-        height: 35px;
-        border-radius: 50px;
         background-color: white;
-        color: #078707;
-        font-weight: bold;
-        border-style: solid;
-        border-width: 1px;
-        border-color: #078707;
       }
     </style>
+    <script>
+      var activeTab = "login";
+    </script>
   </head>
 
-  <body onload="funload()">
-    <header>
-      <nav class="navbar navbar-expand-sm bg-dark">
-        <a class="navbar-brand">
-          <!-- The below line can be an image or a h1, either will work -->
-          <img src="logo.png" alt="Google logo" width="60" height="30px" />
-        </a>
-
-        <button
-          style="background-color: white"
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <span><a class="nav-link" href="index.html">Home</a></span>
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link active" href="login.html">Login</a></span
-              >
-            </li>
-            <li class="nav-item">
-              <span
-                ><a class="nav-link" href="CustomerRegister.html"
-                  >Register</a
-                ></span
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+  <body>
+    <div id="navbar-placeholder"></div>
 
     <div id="topmid">
       <h1>Welcome to Online Book Store</h1>
@@ -146,19 +102,11 @@
         </tbody>
       </table>
     </form>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
     <div id="external-scripts"></div>
+    <script src="scripts/common.js"></script>
     <script>
-      fetch("external-scripts.html")
-        .then((res) => res.text())
-        .then((data) => {
-          document.getElementById("external-scripts").innerHTML = data;
-          document.getElementById(activeTab).classList.add("active");
-        });
+      const active = document.getElementById(activeTab);
+      if (active) active.classList.add("active");
     </script>
   </body>
 </html>
